syntax = "proto3";
package raftkvpb;

option java_multiple_files = true;
option java_package = "mtikv";

import "google/api/annotations.proto";


message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    string error = 2;
}

message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    string error = 1;
}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {
    string error = 1;
}

message AddNodeRequest {
    uint64 nodeId = 1;
    string url = 2;
}

message AddNodeResponse {
    string error = 1;
}

message RemoveNodeRequest {
    uint64 nodeId = 1;
}

message RemoveNodeResponse {
    string error = 1;
}

service RaftService{
    rpc AddNode (AddNodeRequest) returns (AddNodeResponse) {
        option (google.api.http) = {
            post: "/api/node"
            body: "*"
        };
    }

    rpc RemoveNode (RemoveNodeRequest) returns (RemoveNodeResponse) {
        option (google.api.http) = {
            delete: "/api/node/{nodeId}"
        };
    }

    rpc Get (GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/api/record/{key}"
        };
    }

    rpc Put (PutRequest) returns (PutResponse) {
        option (google.api.http) = {
            post: "/api/record"
            body: "*"
        };
    }

    rpc Delete (DeleteRequest) returns (DeleteResponse) {
        option (google.api.http) = {
            delete: "/api/record/{key}"
        };
    }
}